# 29-ha-noi-thap-rua-ho-guom-glb

./: .gitignore  README.md  pyproject.toml
docs/: curved_water_underlay_fix_notes.md  curved_water_underlay_only_notes.md  final_label_base_tree_fix_notes.md  final_round_water_trees_back_label_notes.md  final_soft_water_back_label_dense_trees_notes.md  final_soft_water_dense_tree_blank_back_fix_notes.md  final_water_surface_revert_notes.md  final_water_tree_back_label_round_notes.md  final_water_tree_label_back_fix_notes.md  reference_and_texture_notes.md  round9_soft_water_dense_trees_blank_back_notes.md  soft_fix_round_notes.md  soft_stone_water_tree_fix_notes.md  soft_water_dense_tree_label_back_fix_notes.md  square_transparent_underside_fix_notes.md  thap_rua_ho_guom_notes.md  title_and_base_fix_notes.md  tree_upgrade_notes.md
generators/29_ha_noi/: thap_rua_ho_guom.py
scripts/: generate_site.py  generate_textures.py
src/glb_forge/: __init__.py  scene.py  scene_writer.py  trees.py
src/glb_forge/scenes/: __init__.py  thap_rua_ho_guom.py  thap_rua_ho_guom_data.py
src/glb_forge/sites/: __init__.py  registry.py
src/glb_forge/sites/provinces/: __init__.py  ha_noi.py
